@@ -25,6 +25,7 @@ class WagtailRegisterable(object):
     ModelAdminGroup instances to be registered with Wagtail's admin area.
     """
     add_to_settings_menu = False
+    exclude_from_explorer = False
 
     def register_with_wagtail(self):
 
@@ -44,6 +45,18 @@ class WagtailRegisterable(object):
         @hooks.register(menu_hook)
         def register_admin_menu_item():
             return self.get_menu_item()
+
+        # Overriding the explorer page queryset is a somewhat 'niche' / experimental
+        # operation, so only attach that hook if we specifically opt into it
+        # by returning True from will_modify_explorer_page_queryset
+        if self.will_modify_explorer_page_queryset():
+            @hooks.register('construct_explorer_page_queryset')
+            def construct_explorer_page_queryset(parent_page, queryset, request):
+                return self.modify_explorer_page_queryset(
+                    parent_page, queryset, request)
+
+    def will_modify_explorer_page_queryset(self):
+        return False
 
 
 class ThumbnailMixin(object):
@@ -512,6 +525,14 @@ class ModelAdmin(WagtailRegisterable):
             )
         return urls
 
+    def will_modify_explorer_page_queryset(self):
+        return (self.is_pagemodel and self.exclude_from_explorer)
+
+    def modify_explorer_page_queryset(self, parent_page, queryset, request):
+        if self.is_pagemodel and self.exclude_from_explorer:
+            queryset = queryset.not_type(self.model)
+        return queryset
+
 
 class ModelAdminGroup(WagtailRegisterable):
     """
@@ -586,6 +607,18 @@ class ModelAdminGroup(WagtailRegisterable):
         for instance in self.modeladmin_instances:
             urls += instance.get_admin_urls_for_registration()
         return urls
+
+    def will_modify_explorer_page_queryset(self):
+        return any(
+            instance.will_modify_explorer_page_queryset()
+            for instance in self.modeladmin_instances
+        )
+
+    def modify_explorer_page_queryset(self, parent_page, queryset, request):
+        for instance in self.modeladmin_instances:
+            queryset = instance.modify_explorer_page_queryset(
+                parent_page, queryset, request)
+        return queryset
 
 
 def modeladmin_register(modeladmin_class):
